build/parser.output
State 71 conflicts: 4 shift/reduce
State 72 conflicts: 4 shift/reduce
State 73 conflicts: 4 shift/reduce
State 74 conflicts: 4 shift/reduce
State 75 conflicts: 8 shift/reduce
State 76 conflicts: 8 shift/reduce
State 77 conflicts: 8 shift/reduce
State 78 conflicts: 8 shift/reduce


Grammar

    0 $accept: program $end

    1 program: include_statement main_func

    2 include_statement: INCLUDE STDIO_H

    3 main_func: INT MAIN L_PAREN R_PAREN L_BRACE statement_list R_BRACE

    4 statement_list: statement
    5               | statement_list statement
    6               | error_statement

    7 error_statement: error SEMICOLON
    8                | error '\n'

    9 statement: if_else_statement
   10          | RETURN expression SEMICOLON
   11          | PRINTF L_PAREN expression_list R_PAREN SEMICOLON
   12          | SCANF L_PAREN expression_list R_PAREN SEMICOLON
   13          | declaration SEMICOLON
   14          | assignment SEMICOLON

   15 if_statement: IF L_PAREN expression R_PAREN L_BRACE statement_list R_BRACE

   16 if_else_if_statement: if_statement ELSE IF L_PAREN expression R_PAREN L_BRACE statement_list R_BRACE
   17                     | if_else_if_statement ELSE IF L_PAREN expression R_PAREN L_BRACE statement_list R_BRACE

   18 if_else_statement: if_statement ELSE L_BRACE statement_list R_BRACE
   19                  | if_else_if_statement ELSE L_BRACE statement_list R_BRACE

   20 assignment: IDENTIFIER EQUAL expression

   21 declaration: type identifier_list

   22 type: INT
   23     | CHAR

   24 identifier_list: IDENTIFIER
   25                | identifier_list COMMA IDENTIFIER

   26 expression_list: expression
   27                | expression_list COMMA expression

   28 expression: NUMBER
   29           | IDENTIFIER
   30           | STRING
   31           | POINTER
   32           | expression GREATER_THAN expression
   33           | expression LESS_THAN expression
   34           | expression DOUBLE_EQUAL expression
   35           | expression NOT_EQUAL expression
   36           | expression PLUS expression
   37           | expression MINUS expression
   38           | expression MULT expression
   39           | expression DIV expression
   40           | L_PAREN expression R_PAREN


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 8
    error (256) 7 8
    NUMBER <dval> (258) 28
    IDENTIFIER <sval> (259) 20 24 25 29
    STRING <sval> (260) 30
    POINTER <sval> (261) 31
    IF (262) 15 16 17
    ELSE (263) 16 17 18 19
    RETURN (264) 10
    MINUS (265) 37
    PLUS (266) 36
    MULT (267) 38
    DIV (268) 39
    EQUAL (269) 20
    L_PAREN (270) 3 11 12 15 16 17 40
    R_PAREN (271) 3 11 12 15 16 17 40
    L_BRACE (272) 3 15 16 17 18 19
    R_BRACE (273) 3 15 16 17 18 19
    SEMICOLON (274) 7 10 11 12 13 14
    INT (275) 3 22
    CHAR (276) 23
    PRINTF (277) 11
    SCANF (278) 12
    INCLUDE (279) 2
    STDIO_H (280) 2
    COMMA (281) 25 27
    MAIN (282) 3
    GREATER_THAN (283) 32
    LESS_THAN (284) 33
    DOUBLE_EQUAL (285) 34
    NOT_EQUAL (286) 35


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    program (34)
        on left: 1
        on right: 0
    include_statement (35)
        on left: 2
        on right: 1
    main_func (36)
        on left: 3
        on right: 1
    statement_list (37)
        on left: 4 5 6
        on right: 3 5 15 16 17 18 19
    error_statement (38)
        on left: 7 8
        on right: 6
    statement (39)
        on left: 9 10 11 12 13 14
        on right: 4 5
    if_statement (40)
        on left: 15
        on right: 16 18
    if_else_if_statement (41)
        on left: 16 17
        on right: 17 19
    if_else_statement (42)
        on left: 18 19
        on right: 9
    assignment (43)
        on left: 20
        on right: 14
    declaration (44)
        on left: 21
        on right: 13
    type (45)
        on left: 22 23
        on right: 21
    identifier_list (46)
        on left: 24 25
        on right: 21 25
    expression_list (47)
        on left: 26 27
        on right: 11 12 27
    expression (48)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 10 15 16 17 20 26 27 32 33 34 35 36 37 38 39 40


State 0

    0 $accept: • program $end

    INCLUDE  shift, and go to state 1

    program            go to state 2
    include_statement  go to state 3


State 1

    2 include_statement: INCLUDE • STDIO_H

    STDIO_H  shift, and go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    1 program: include_statement • main_func

    INT  shift, and go to state 6

    main_func  go to state 7


State 4

    2 include_statement: INCLUDE STDIO_H •

    $default  reduce using rule 2 (include_statement)


State 5

    0 $accept: program $end •

    $default  accept


State 6

    3 main_func: INT • MAIN L_PAREN R_PAREN L_BRACE statement_list R_BRACE

    MAIN  shift, and go to state 8


State 7

    1 program: include_statement main_func •

    $default  reduce using rule 1 (program)


State 8

    3 main_func: INT MAIN • L_PAREN R_PAREN L_BRACE statement_list R_BRACE

    L_PAREN  shift, and go to state 9


State 9

    3 main_func: INT MAIN L_PAREN • R_PAREN L_BRACE statement_list R_BRACE

    R_PAREN  shift, and go to state 10


State 10

    3 main_func: INT MAIN L_PAREN R_PAREN • L_BRACE statement_list R_BRACE

    L_BRACE  shift, and go to state 11


State 11

    3 main_func: INT MAIN L_PAREN R_PAREN L_BRACE • statement_list R_BRACE

    error       shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    RETURN      shift, and go to state 15
    INT         shift, and go to state 16
    CHAR        shift, and go to state 17
    PRINTF      shift, and go to state 18
    SCANF       shift, and go to state 19

    statement_list        go to state 20
    error_statement       go to state 21
    statement             go to state 22
    if_statement          go to state 23
    if_else_if_statement  go to state 24
    if_else_statement     go to state 25
    assignment            go to state 26
    declaration           go to state 27
    type                  go to state 28


State 12

    7 error_statement: error • SEMICOLON
    8                | error • '\n'

    SEMICOLON  shift, and go to state 29
    '\n'       shift, and go to state 30


State 13

   20 assignment: IDENTIFIER • EQUAL expression

    EQUAL  shift, and go to state 31


State 14

   15 if_statement: IF • L_PAREN expression R_PAREN L_BRACE statement_list R_BRACE

    L_PAREN  shift, and go to state 32


State 15

   10 statement: RETURN • expression SEMICOLON

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 38


State 16

   22 type: INT •

    $default  reduce using rule 22 (type)


State 17

   23 type: CHAR •

    $default  reduce using rule 23 (type)


State 18

   11 statement: PRINTF • L_PAREN expression_list R_PAREN SEMICOLON

    L_PAREN  shift, and go to state 39


State 19

   12 statement: SCANF • L_PAREN expression_list R_PAREN SEMICOLON

    L_PAREN  shift, and go to state 40


State 20

    3 main_func: INT MAIN L_PAREN R_PAREN L_BRACE statement_list • R_BRACE
    5 statement_list: statement_list • statement

    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    RETURN      shift, and go to state 15
    R_BRACE     shift, and go to state 41
    INT         shift, and go to state 16
    CHAR        shift, and go to state 17
    PRINTF      shift, and go to state 18
    SCANF       shift, and go to state 19

    statement             go to state 42
    if_statement          go to state 23
    if_else_if_statement  go to state 24
    if_else_statement     go to state 25
    assignment            go to state 26
    declaration           go to state 27
    type                  go to state 28


State 21

    6 statement_list: error_statement •

    $default  reduce using rule 6 (statement_list)


State 22

    4 statement_list: statement •

    $default  reduce using rule 4 (statement_list)


State 23

   16 if_else_if_statement: if_statement • ELSE IF L_PAREN expression R_PAREN L_BRACE statement_list R_BRACE
   18 if_else_statement: if_statement • ELSE L_BRACE statement_list R_BRACE

    ELSE  shift, and go to state 43


State 24

   17 if_else_if_statement: if_else_if_statement • ELSE IF L_PAREN expression R_PAREN L_BRACE statement_list R_BRACE
   19 if_else_statement: if_else_if_statement • ELSE L_BRACE statement_list R_BRACE

    ELSE  shift, and go to state 44


State 25

    9 statement: if_else_statement •

    $default  reduce using rule 9 (statement)


State 26

   14 statement: assignment • SEMICOLON

    SEMICOLON  shift, and go to state 45


State 27

   13 statement: declaration • SEMICOLON

    SEMICOLON  shift, and go to state 46


State 28

   21 declaration: type • identifier_list

    IDENTIFIER  shift, and go to state 47

    identifier_list  go to state 48


State 29

    7 error_statement: error SEMICOLON •

    $default  reduce using rule 7 (error_statement)


State 30

    8 error_statement: error '\n' •

    $default  reduce using rule 8 (error_statement)


State 31

   20 assignment: IDENTIFIER EQUAL • expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 49


State 32

   15 if_statement: IF L_PAREN • expression R_PAREN L_BRACE statement_list R_BRACE

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 50


State 33

   28 expression: NUMBER •

    $default  reduce using rule 28 (expression)


State 34

   29 expression: IDENTIFIER •

    $default  reduce using rule 29 (expression)


State 35

   30 expression: STRING •

    $default  reduce using rule 30 (expression)


State 36

   31 expression: POINTER •

    $default  reduce using rule 31 (expression)


State 37

   40 expression: L_PAREN • expression R_PAREN

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 51


State 38

   10 statement: RETURN expression • SEMICOLON
   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    MULT          shift, and go to state 54
    DIV           shift, and go to state 55
    SEMICOLON     shift, and go to state 56
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60


State 39

   11 statement: PRINTF L_PAREN • expression_list R_PAREN SEMICOLON

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression_list  go to state 61
    expression       go to state 62


State 40

   12 statement: SCANF L_PAREN • expression_list R_PAREN SEMICOLON

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression_list  go to state 63
    expression       go to state 62


State 41

    3 main_func: INT MAIN L_PAREN R_PAREN L_BRACE statement_list R_BRACE •

    $default  reduce using rule 3 (main_func)


State 42

    5 statement_list: statement_list statement •

    $default  reduce using rule 5 (statement_list)


State 43

   16 if_else_if_statement: if_statement ELSE • IF L_PAREN expression R_PAREN L_BRACE statement_list R_BRACE
   18 if_else_statement: if_statement ELSE • L_BRACE statement_list R_BRACE

    IF       shift, and go to state 64
    L_BRACE  shift, and go to state 65


State 44

   17 if_else_if_statement: if_else_if_statement ELSE • IF L_PAREN expression R_PAREN L_BRACE statement_list R_BRACE
   19 if_else_statement: if_else_if_statement ELSE • L_BRACE statement_list R_BRACE

    IF       shift, and go to state 66
    L_BRACE  shift, and go to state 67


State 45

   14 statement: assignment SEMICOLON •

    $default  reduce using rule 14 (statement)


State 46

   13 statement: declaration SEMICOLON •

    $default  reduce using rule 13 (statement)


State 47

   24 identifier_list: IDENTIFIER •

    $default  reduce using rule 24 (identifier_list)


State 48

   21 declaration: type identifier_list •
   25 identifier_list: identifier_list • COMMA IDENTIFIER

    COMMA  shift, and go to state 68

    $default  reduce using rule 21 (declaration)


State 49

   20 assignment: IDENTIFIER EQUAL expression •
   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    MULT          shift, and go to state 54
    DIV           shift, and go to state 55
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    $default  reduce using rule 20 (assignment)


State 50

   15 if_statement: IF L_PAREN expression • R_PAREN L_BRACE statement_list R_BRACE
   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    MULT          shift, and go to state 54
    DIV           shift, and go to state 55
    R_PAREN       shift, and go to state 69
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60


State 51

   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression
   40           | L_PAREN expression • R_PAREN

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    MULT          shift, and go to state 54
    DIV           shift, and go to state 55
    R_PAREN       shift, and go to state 70
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60


State 52

   37 expression: expression MINUS • expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 71


State 53

   36 expression: expression PLUS • expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 72


State 54

   38 expression: expression MULT • expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 73


State 55

   39 expression: expression DIV • expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 74


State 56

   10 statement: RETURN expression SEMICOLON •

    $default  reduce using rule 10 (statement)


State 57

   32 expression: expression GREATER_THAN • expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 75


State 58

   33 expression: expression LESS_THAN • expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 76


State 59

   34 expression: expression DOUBLE_EQUAL • expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 77


State 60

   35 expression: expression NOT_EQUAL • expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 78


State 61

   11 statement: PRINTF L_PAREN expression_list • R_PAREN SEMICOLON
   27 expression_list: expression_list • COMMA expression

    R_PAREN  shift, and go to state 79
    COMMA    shift, and go to state 80


State 62

   26 expression_list: expression •
   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    MULT          shift, and go to state 54
    DIV           shift, and go to state 55
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    $default  reduce using rule 26 (expression_list)


State 63

   12 statement: SCANF L_PAREN expression_list • R_PAREN SEMICOLON
   27 expression_list: expression_list • COMMA expression

    R_PAREN  shift, and go to state 81
    COMMA    shift, and go to state 80


State 64

   16 if_else_if_statement: if_statement ELSE IF • L_PAREN expression R_PAREN L_BRACE statement_list R_BRACE

    L_PAREN  shift, and go to state 82


State 65

   18 if_else_statement: if_statement ELSE L_BRACE • statement_list R_BRACE

    error       shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    RETURN      shift, and go to state 15
    INT         shift, and go to state 16
    CHAR        shift, and go to state 17
    PRINTF      shift, and go to state 18
    SCANF       shift, and go to state 19

    statement_list        go to state 83
    error_statement       go to state 21
    statement             go to state 22
    if_statement          go to state 23
    if_else_if_statement  go to state 24
    if_else_statement     go to state 25
    assignment            go to state 26
    declaration           go to state 27
    type                  go to state 28


State 66

   17 if_else_if_statement: if_else_if_statement ELSE IF • L_PAREN expression R_PAREN L_BRACE statement_list R_BRACE

    L_PAREN  shift, and go to state 84


State 67

   19 if_else_statement: if_else_if_statement ELSE L_BRACE • statement_list R_BRACE

    error       shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    RETURN      shift, and go to state 15
    INT         shift, and go to state 16
    CHAR        shift, and go to state 17
    PRINTF      shift, and go to state 18
    SCANF       shift, and go to state 19

    statement_list        go to state 85
    error_statement       go to state 21
    statement             go to state 22
    if_statement          go to state 23
    if_else_if_statement  go to state 24
    if_else_statement     go to state 25
    assignment            go to state 26
    declaration           go to state 27
    type                  go to state 28


State 68

   25 identifier_list: identifier_list COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 86


State 69

   15 if_statement: IF L_PAREN expression R_PAREN • L_BRACE statement_list R_BRACE

    L_BRACE  shift, and go to state 87


State 70

   40 expression: L_PAREN expression R_PAREN •

    $default  reduce using rule 40 (expression)


State 71

   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   37           | expression MINUS expression •
   38           | expression • MULT expression
   39           | expression • DIV expression

    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    GREATER_THAN  [reduce using rule 37 (expression)]
    LESS_THAN     [reduce using rule 37 (expression)]
    DOUBLE_EQUAL  [reduce using rule 37 (expression)]
    NOT_EQUAL     [reduce using rule 37 (expression)]
    $default      reduce using rule 37 (expression)


State 72

   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   36           | expression PLUS expression •
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression

    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    GREATER_THAN  [reduce using rule 36 (expression)]
    LESS_THAN     [reduce using rule 36 (expression)]
    DOUBLE_EQUAL  [reduce using rule 36 (expression)]
    NOT_EQUAL     [reduce using rule 36 (expression)]
    $default      reduce using rule 36 (expression)


State 73

   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   38           | expression MULT expression •
   39           | expression • DIV expression

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    GREATER_THAN  [reduce using rule 38 (expression)]
    LESS_THAN     [reduce using rule 38 (expression)]
    DOUBLE_EQUAL  [reduce using rule 38 (expression)]
    NOT_EQUAL     [reduce using rule 38 (expression)]
    $default      reduce using rule 38 (expression)


State 74

   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression
   39           | expression DIV expression •

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    GREATER_THAN  [reduce using rule 39 (expression)]
    LESS_THAN     [reduce using rule 39 (expression)]
    DOUBLE_EQUAL  [reduce using rule 39 (expression)]
    NOT_EQUAL     [reduce using rule 39 (expression)]
    $default      reduce using rule 39 (expression)


State 75

   32 expression: expression • GREATER_THAN expression
   32           | expression GREATER_THAN expression •
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    MULT          shift, and go to state 54
    DIV           shift, and go to state 55
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    MINUS         [reduce using rule 32 (expression)]
    PLUS          [reduce using rule 32 (expression)]
    MULT          [reduce using rule 32 (expression)]
    DIV           [reduce using rule 32 (expression)]
    GREATER_THAN  [reduce using rule 32 (expression)]
    LESS_THAN     [reduce using rule 32 (expression)]
    DOUBLE_EQUAL  [reduce using rule 32 (expression)]
    NOT_EQUAL     [reduce using rule 32 (expression)]
    $default      reduce using rule 32 (expression)


State 76

   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   33           | expression LESS_THAN expression •
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    MULT          shift, and go to state 54
    DIV           shift, and go to state 55
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    MINUS         [reduce using rule 33 (expression)]
    PLUS          [reduce using rule 33 (expression)]
    MULT          [reduce using rule 33 (expression)]
    DIV           [reduce using rule 33 (expression)]
    GREATER_THAN  [reduce using rule 33 (expression)]
    LESS_THAN     [reduce using rule 33 (expression)]
    DOUBLE_EQUAL  [reduce using rule 33 (expression)]
    NOT_EQUAL     [reduce using rule 33 (expression)]
    $default      reduce using rule 33 (expression)


State 77

   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   34           | expression DOUBLE_EQUAL expression •
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    MULT          shift, and go to state 54
    DIV           shift, and go to state 55
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    MINUS         [reduce using rule 34 (expression)]
    PLUS          [reduce using rule 34 (expression)]
    MULT          [reduce using rule 34 (expression)]
    DIV           [reduce using rule 34 (expression)]
    GREATER_THAN  [reduce using rule 34 (expression)]
    LESS_THAN     [reduce using rule 34 (expression)]
    DOUBLE_EQUAL  [reduce using rule 34 (expression)]
    NOT_EQUAL     [reduce using rule 34 (expression)]
    $default      reduce using rule 34 (expression)


State 78

   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   35           | expression NOT_EQUAL expression •
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    MULT          shift, and go to state 54
    DIV           shift, and go to state 55
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    MINUS         [reduce using rule 35 (expression)]
    PLUS          [reduce using rule 35 (expression)]
    MULT          [reduce using rule 35 (expression)]
    DIV           [reduce using rule 35 (expression)]
    GREATER_THAN  [reduce using rule 35 (expression)]
    LESS_THAN     [reduce using rule 35 (expression)]
    DOUBLE_EQUAL  [reduce using rule 35 (expression)]
    NOT_EQUAL     [reduce using rule 35 (expression)]
    $default      reduce using rule 35 (expression)


State 79

   11 statement: PRINTF L_PAREN expression_list R_PAREN • SEMICOLON

    SEMICOLON  shift, and go to state 88


State 80

   27 expression_list: expression_list COMMA • expression

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 89


State 81

   12 statement: SCANF L_PAREN expression_list R_PAREN • SEMICOLON

    SEMICOLON  shift, and go to state 90


State 82

   16 if_else_if_statement: if_statement ELSE IF L_PAREN • expression R_PAREN L_BRACE statement_list R_BRACE

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 91


State 83

    5 statement_list: statement_list • statement
   18 if_else_statement: if_statement ELSE L_BRACE statement_list • R_BRACE

    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    RETURN      shift, and go to state 15
    R_BRACE     shift, and go to state 92
    INT         shift, and go to state 16
    CHAR        shift, and go to state 17
    PRINTF      shift, and go to state 18
    SCANF       shift, and go to state 19

    statement             go to state 42
    if_statement          go to state 23
    if_else_if_statement  go to state 24
    if_else_statement     go to state 25
    assignment            go to state 26
    declaration           go to state 27
    type                  go to state 28


State 84

   17 if_else_if_statement: if_else_if_statement ELSE IF L_PAREN • expression R_PAREN L_BRACE statement_list R_BRACE

    NUMBER      shift, and go to state 33
    IDENTIFIER  shift, and go to state 34
    STRING      shift, and go to state 35
    POINTER     shift, and go to state 36
    L_PAREN     shift, and go to state 37

    expression  go to state 93


State 85

    5 statement_list: statement_list • statement
   19 if_else_statement: if_else_if_statement ELSE L_BRACE statement_list • R_BRACE

    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    RETURN      shift, and go to state 15
    R_BRACE     shift, and go to state 94
    INT         shift, and go to state 16
    CHAR        shift, and go to state 17
    PRINTF      shift, and go to state 18
    SCANF       shift, and go to state 19

    statement             go to state 42
    if_statement          go to state 23
    if_else_if_statement  go to state 24
    if_else_statement     go to state 25
    assignment            go to state 26
    declaration           go to state 27
    type                  go to state 28


State 86

   25 identifier_list: identifier_list COMMA IDENTIFIER •

    $default  reduce using rule 25 (identifier_list)


State 87

   15 if_statement: IF L_PAREN expression R_PAREN L_BRACE • statement_list R_BRACE

    error       shift, and go to state 12
    IDENTIFIER  shift, and go to state 13
    IF          shift, and go to state 14
    RETURN      shift, and go to state 15
    INT         shift, and go to state 16
    CHAR        shift, and go to state 17
    PRINTF      shift, and go to state 18
    SCANF       shift, and go to state 19

    statement_list        go to state 95
    error_statement       go to state 21
    statement             go to state 22
    if_statement          go to state 23
    if_else_if_statement  go to state 24
    if_else_statement     go to state 25
    assignment            go to state 26
    declaration           go to state 27
    type                  go to state 28


State 88

   11 statement: PRINTF L_PAREN expression_list R_PAREN SEMICOLON •

    $default  reduce using rule 11 (statement)


State 89

   27 expression_list: expression_list COMMA expression •
   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression

    MINUS         shift, and go to state 52
    PLUS          shift, and go to state 53
    MULT          shift, and go to state 54
    DIV           shift, and go to state 55
    GREATER_THAN  shift, and go to state 57
    LESS_THAN     shift, and go to state 58
    DOUBLE_EQUAL  shift, and go to state 59
    NOT_EQUAL     shift, and go to state 60

    $default  reduce using rule 27 (expression_list)


State 90

   12 statement: SCANF L_PAREN expression_list R_PAREN SEMICOLON •

    $default  reduce using rule 12 (statement)


State 91

   16 if_else_if_statement: if_statement ELSE IF L_PAREN expression • R_PAREN L_BRACE statement_list R_BRACE
   32 expression: expression • GREATER_THAN expression
   33           | expression • LESS_THAN expression
   34           | expression • DOUBLE_EQUAL expression
   35           | expression • NOT_EQUAL expression
   36           | expression • PLUS expression
   37           | expression • MINUS expression
   38           | expression • MULT expression
   39           | expression • DIV expression
